test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_struct_conditional.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(v1)
  ;
  extern
  struct
  identifier(s)
  identifier(v2)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  const int(1)
  ?
  identifier(v1)
  :
  identifier(v2)
  ;
  }
